manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: cloud-sample 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-sample
  template:
    metadata:
      labels:
        app: cloud-sample 
    spec:
      containers:
        - name: cloud-sample 
          image: acrcloudbizcecomm.azurecr.io/82210667/cloud-sample
          ports:
          - containerPort: 8080
          volumeMounts:
          - name: app-storage
            mountPath: /data
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: cepg-aa-std-pvc
